edit much things

--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -80,7 +80,7 @@
                     <label for="sanpham">Sản phẩm</label>
                     <input type="text" class="form-control" id="sanpham" placeholder="Sản phẩm" required>
 
-                    <label for="date">Ngày nhập</label>
+                    <label for="date">Ngày nhập kho</label>
                     <input type="date" class="form-control" id="date" placeholder="Ngày nhập" required>
     
                     <label for="quantity">Số lượng</label>
