--- a/src/kx/tpkx.html
+++ b/src/kx/tpkx.html
@@ -66,7 +66,7 @@
 
         <div id="sheet-buttons">
         </div>
-        <div class="col-12" id="grid" style="visibility: hidden;">
+        <div class="col-12" id="grid" style="display: none;">
         </div>
     </div>
 
@@ -91,7 +91,7 @@
         
         //Clear recent searches and spreadsheets
         function empty(includedTon = false) {
-            document.getElementById('grid').style.visibility = 'hidden';
+            document.getElementById('grid').style.display = 'none';
             $('#sheet-buttons').empty();
             $('#ton div').remove();
 
