--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -75,7 +75,7 @@
                     <label for="sanpham">Sản phẩm</label>
                     <input type="text" class="form-control" id="sanpham" placeholder="Sản phẩm" required>
 
-                    <label for="date">Ngày nhập</label>
+                    <label for="date">Ngày xuất kho</label>
                     <input type="date" class="form-control" id="date" placeholder="Ngày xuất" required>
     
                     <label for="quantity">Số lượng</label>
