edit new version

--- a/src/kx/lkkx.html
+++ b/src/kx/lkkx.html
@@ -64,7 +64,7 @@
         <div class="col-6">
             <button onclick="exportExcel()" style="display: flex; margin-left: auto; margin-right: auto; align-items: center; justify-content: center; margin-top: 50px; height: 50px; width: 250px; text-align: center; background-color: rgb(49, 197, 49); color: white; border-radius: 3px;">Xuất file excel</button>
 
-            <div id="sheet-buttons" style="">
+            <div id="sheet-buttons">
             </div>
         </div>
     </div>
