--- a/src/addExcel/removeKeyword.html
+++ b/src/addExcel/removeKeyword.html
@@ -45,7 +45,7 @@
             </div>
             <div class="col-6 form-group" style="margin-top: 5px;">
                 <div style="display: flex; justify-content: flex-end;">
-                    <p class="" id="partnumResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;">Keyword 2</p>
+                    <p class="" id="partnumResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;"></p>
                     <div class="">
                         <button onclick="remove('partnum')" style="padding: 10px 15px; margin-top: 10px;">Delete</button>
                     </div>
@@ -64,7 +64,7 @@
             </div>
             <div class="col-6 form-group" style="margin-top: 5px;">
                 <div style="display: flex; justify-content: flex-end;">
-                    <p class="" id="tenhangResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;">Keyword 2</p>
+                    <p class="" id="tenhangResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;"></p>
                     <div class="">
                         <button onclick="remove('tenhang')" style="padding: 10px 15px; margin-top: 10px;">Delete</button>
                     </div>
@@ -83,7 +83,7 @@
             </div>
             <div class="col-6 form-group" style="margin-top: 5px;">
                 <div style="display: flex; justify-content: flex-end;">
-                    <p class="" id="sanphamResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;">Keyword 2</p>
+                    <p class="" id="sanphamResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;"></p>
                     <div class="">
                         <button onclick="remove('sanpham')" style="padding: 10px 15px; margin-top: 10px;">Delete</button>
                     </div>
@@ -101,7 +101,7 @@
             </div>
             <div class="col-6 form-group" style="margin-top: 5px;">
                 <div style="display: flex; justify-content: flex-end;">
-                    <p class="" id="sohopdongResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;">Keyword 2</p>
+                    <p class="" id="sohopdongResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;"></p>
                     <div class="">
                         <button onclick="remove('sohopdong')" style="padding: 10px 15px; margin-top: 10px;">Delete</button>
                     </div>
@@ -120,7 +120,7 @@
             </div>
             <div class="col-6 form-group" style="margin-top: 5px;">
                 <div style="display: flex; justify-content: flex-end;">
-                    <p class="" id="ctyResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;">Keyword 2</p>
+                    <p class="" id="ctyResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;"></p>
                     <div class="">
                         <button onclick="remove('cty')" style="padding: 10px 15px; margin-top: 10px;">Delete</button>
                     </div>
@@ -140,7 +140,7 @@
             </div>
             <div class="col-6 form-group" style="margin-top: 5px;">
                 <div style="display: flex; justify-content: flex-end;">
-                    <p class="" id="dvtinhResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;">Keyword 2</p>
+                    <p class="" id="dvtinhResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;"></p>
                     <div class="">
                         <button onclick="remove('dvtinh')" style="padding: 10px 15px; margin-top: 10px;">Delete</button>
                     </div>
