--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
         crossorigin="anonymous"></script>
     
     <script>
-        // Initialize/Update global variables/////////////////////////
+        // Initialize/Update global variables
         // Via localStorage
         //Reviews
         const reviewsUpdated = (localStorage.reviews && JSON.parse(localStorage.getItem('reviews')).hasOwnProperty('nhapLinhkien'));
@@ -151,23 +151,24 @@
         const notification = document.getElementById('notification');
         const message = document.getElementById('message');
         const restartButton = document.getElementById('restart-button');
+        
         ipcRenderer.on('update_available', () => {
-        ipcRenderer.removeAllListeners('update_available');
-        message.innerText = 'A new update is available. Downloading now...';
-        notification.classList.remove('hidden');
+            ipcRenderer.removeAllListeners('update_available');
+            message.innerText = 'A new update is available. Downloading now...';
+            notification.classList.remove('hidden');
         });
         ipcRenderer.on('update_downloaded', () => {
-        ipcRenderer.removeAllListeners('update_downloaded');
-        message.innerText = 'Update Downloaded. It will be installed on restart. Restart now?';
-        restartButton.classList.remove('hidden');
-        notification.classList.remove('hidden');
+            ipcRenderer.removeAllListeners('update_downloaded');
+            message.innerText = 'Update Downloaded. It will be installed on restart. Restart now?';
+            restartButton.classList.remove('hidden');
+            notification.classList.remove('hidden');
         });
 
         function closeNotification() {
-        notification.classList.add('hidden');
+            notification.classList.add('hidden');
         }
         function restartApp() {
-        ipcRenderer.send('restart_app');
+            ipcRenderer.send('restart_app');
         }
     </script>
     <!-- Insert this line after script imports -->
