--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -124,6 +124,7 @@
     <script src="../scripts/localStorage.js"></script>
     
     <script>
+        console.log(window.location.href);
         //Show last submission
         displayLastSubmission('nhapLinhkien');
 
