--- a/src/nhap/tpnhap.html
+++ b/src/nhap/tpnhap.html
@@ -56,7 +56,7 @@
             <input type="text" class="form-control" id="chip" placeholder="Chip">
 
             <label for="quantity">Số lượng</label>
-            <input type="number" class="form-control" id="quantity" placeholder="Số lượng">
+            <input type="text" onchange="(function(el){el.value=numeral(el.value).format('0,0');})(this)" class="form-control" id="quantity" placeholder="Số lượng">
 
         </form>
 
@@ -124,7 +124,7 @@
                 chip: chip,
                 date: date,
                 dvtinh: 'none',
-                quantity: parseInt(quantity, 10),
+                quantity: numeral(quantity).value(),
                 submissionDate: submissionDate,
                 state: 'nhap'
             }
@@ -185,6 +185,7 @@
                 //Submit all previous reviews
                 var index = 0;
                 while (index < reviews['nhapThanhpham'].length) { //Inside the array
+                    reviews['nhapThanhpham'][index].quantity = numeral(reviews['nhapThanhpham'][index].quantity).value();
                     var canSubmit = ipcRenderer.sendSync('save-thanhpham', reviews['nhapThanhpham'][index]);
                     if (canSubmit) { 
                         removeReview('nhapThanhpham', index);
