--- a/src/chinhsua/cstp.html
+++ b/src/chinhsua/cstp.html
@@ -87,6 +87,7 @@
     <script>
 
         var select = document.getElementById('type')
+        var numeral = require('numeral');
 
         //Auto Complete
         const trigger = () => {
@@ -164,7 +165,7 @@
                     var sohopdong = $('<p></p>').html('Số hợp đồng: ' + doc.sohopdong);
                     var chip = $('<p></p>').html('Chip: ' + doc.chip);
                     var date = $('<p></p>').html('Ngày nhập: ' + doc.date);
-                    var quantity = $('<p></p>').html('Số lượng: ' + doc.quantity);
+                    var quantity = $('<p></p>').html('Số lượng: ' + numeral(doc.quantity).format('0,0'));
                     var button = $(`<button onclick="redirect('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
                     var butto = $(`<button onclick="redirect1('${doc.id}'); nhaps.splice(${index++}, 1); print('nhap')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
                     block.append(butto, button, tenhang, mcu, sohopdong, chip, date, quantity);
@@ -180,7 +181,7 @@
                     var sohopdong = $('<p></p>').html('Số hợp đồng: ' + doc.sohopdong);
                     var chip = $('<p></p>').html('Chip: ' + doc.chip);
                     var date = $('<p></p>').html('Ngày nhập: ' + doc.date);
-                    var quantity = $('<p></p>').html('Số lượng: ' + doc.quantity);
+                    var quantity = $('<p></p>').html('Số lượng: ' + numeral(doc.quantity).format('0,0'));
                     var button = $(`<button onclick="redirect2('${doc.id}')" style="position: absolute; right: 0; background-color: transparent;"><i class="far fa-edit"></i></button>`);
                     var butto = $(`<button onclick="redirect3('${doc.id}'); xuats.splice(${index++}, 1); print('xuat')" style="position: absolute; right: 30px; margin-right:30px; background-color: transparent;"><i class="far fa-trash-alt"></i></button>`);
                     block.append(butto, button, tenhang, mcu, sohopdong, chip, date, quantity);
