--- a/src/xuat/tpxuat.html
+++ b/src/xuat/tpxuat.html
@@ -90,10 +90,10 @@
           
           // Only ASCII character in that range allowed
           var ASCIICode = (evt.which) ? evt.which : evt.keyCode
-          if (ASCIICode > 31 && (ASCIICode < 48 || ASCIICode > 57))
+          if ((ASCIICode > 31 && (ASCIICode < 46 || ASCIICode > 57)) || ASCIICode == 47)
               return false;
           return true;
-      }
+        }
         //Show last submission
         displayLastSubmission('xuatThanhpham');
 
